feat: send hangout poll

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
-ENVIRONMENT=
+ENVIRONMENT="test"
 
 DISCORD_TOKEN=
 MCSERVER_IP=
 
 # prod data
 ASKOWICZE_GUILD_ID=
+EVENTS_ID=
+GAYNERAL_ID=
 GAYMING_ID=
 
 # test data
 TEST_GUILD_ID=
+TEST_EVENTS_ID=
+TEST_GAYNERAL_ID=
 TEST_GAYMING_ID=
