style: renamed constants

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,19 @@
-ENVIRONMENT="test"
+ENVIRONMENT=
 
 DISCORD_TOKEN=
 MCSERVER_IP=
 
 # prod data
-ASKOWICZE_GUILD_ID=
-EVENTS_ID=
-GAYNERAL_ID=
-GAYMING_ID=
+GUILD_ID=
+EVENTS_CHANNEL_ID=
+BIRTHDAY_CHANNEL_ID=
+MC_CHANNEL_ID=
+MC_CATEGORY_ID=
 
 # test data
 TEST_GUILD_ID=
-TEST_EVENTS_ID=
-TEST_GAYNERAL_ID=
-TEST_GAYMING_ID=
+TEST_EVENTS_CHANNEL_ID=
+TEST_BIRTHDAY_CHANNEL_ID=
+TEST_MC_CHANNEL_ID=
+TEST_MC_CATEGORY_ID=
+
