style: rename constants

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,18 @@
-ENVIRONMENT=
+ENVIRONMENT="test"
 
-DISCORD_TOKEN=
+TOKEN=
 MCSERVER_IP=
 
 # prod data
 GUILD_ID=
-EVENTS_CHANNEL_ID=
+HANGOUT_POLL_CHANNEL_ID=
 BIRTHDAY_CHANNEL_ID=
 MC_CHANNEL_ID=
 MC_CATEGORY_ID=
 
 # test data
 TEST_GUILD_ID=
-TEST_EVENTS_CHANNEL_ID=
+TEST_HANGOUT_POLL_CHANNEL_ID=
 TEST_BIRTHDAY_CHANNEL_ID=
 TEST_MC_CHANNEL_ID=
 TEST_MC_CATEGORY_ID=
-
