fix: issue with nested quotation marks

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ MCSERVER_IP=
 
 # prod data
 GUILD_ID=
+REMINDER_CHANNEL_ID=
 HANGOUT_POLL_CHANNEL_ID=
 BIRTHDAY_CHANNEL_ID=
 MC_CHANNEL_ID=
@@ -12,6 +13,7 @@ MC_CATEGORY_ID=
 
 # test data
 TEST_GUILD_ID=
+TEST_REMINDER_CHANNEL_ID=
 TEST_HANGOUT_POLL_CHANNEL_ID=
 TEST_BIRTHDAY_CHANNEL_ID=
 TEST_MC_CHANNEL_ID=
